<resources>
    <string name="app_name">ARCoreMeasure</string>
    <string name="ok">OK</string>

    <string name="need_permission">Camera permission is needed to run this application</string>

    <string name="not_support">This device does not support AR. </string>

    <string name="action_1">Delete</string>
    <string name="action_2">Set as first</string>
    <string name="action_3">Horizontal move</string>
    <string name="action_4">Vertical move</string>

    <string name="action_1_toast">Remove this cube.</string>
    <string name="action_2_toast">Reorder and set this cube to the first.</string>
    <string name="action_3_toast">Move on x and z axis.</string>
    <string name="action_4_toast">Move on y axis.</string>
	
    <string name="name_of_object">Name of Object</string>
    <string name="Length">Length:</string>
    <string name="Width">Width:</string>
    <string name="Comments">Comments:</string>
    <string name="Save">Save</string>
    <string name="Capture">Capture</string>
    <string name="Cancel">Cancel</string>
    <string name="Submit">Submit</string>

</resources>
