<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    >

    <TextView
        android:id="@+id/name_of_object"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_of_object"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
        />

    <EditText
        android:id="@+id/name_of_object_edit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:maxLines="1"
        android:hint="Type Name of Object"

        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Length"
            android:layout_marginLeft="20dp"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_marginTop="50dp"
            />

        <TextView
            android:id="@+id/width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Width"
            android:layout_toRightOf="@+id/length"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="130dp"
            />

        <Button
            android:id="@+id/length_capture_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/length"
            android:textColor="@color/black"
            android:text="@string/Capture"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            />

        <Button
            android:id="@+id/width_capture_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/width"
            android:layout_toRightOf="@+id/length_capture_button"
            android:textColor="@color/black"
            android:text="@string/Capture"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Comments"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_below="@+id/length_capture_button"
            android:layout_marginTop="50dp"
            />

        <EditText
            android:id="@+id/comment_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/comment"
            android:hint="Type your comments"
            android:textSize="15sp"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/comment_edit"
            android:layout_centerHorizontal="true"
            android:text="@string/Save"
            android:layout_marginTop="70dp"
            />

    </RelativeLayout>

</LinearLayout>